cleaned up some styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
                 <div id ="nav-bar">
                     <span id ="nav-span">
-                        Welcome, Shelby! aka(Michelle)
+                        Welcome, Sue!
                         <button id = "add-pet" class = "btn-styles" >Add a New Pet Friend! </button>
                     </span>
                 </div>
